# Whale-Optimization-Problem

./: LICENSE  pyproject.toml
.github/workflows/: ci.yml
src/Strategies/: BubbleNetAttackingMethod.py  EncirclingPrey.py  SearchForPrey.py  StrategySuperClass.py
src/utils/: throw_coin.py
src/whale_optimization_algorithm/: main.py
tests/strategies/: test_bubble_net_attacking.py  test_encircling_prey.py  test_search_for_prey.py
